syntax = "proto3";

package helvetia;

option java_package = "helvetia";
option java_multiple_files = true;

message PopularRank {
  string id = 1;
  int64 timestamp = 2;
  string temporalGranularity = 3;   // "daily" | "weekly" | "monthly"
  string articleAidList = 4;
}
